fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@
   background-color: var(--dark-gray);
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .text-gray {
   color: var(--gray);
 }
@@ -41,6 +45,10 @@ a {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 1);
   z-index: 10;
   cursor: pointer;
+}
+
+.swiper {
+  overflow: visible !important;
 }
 
 footer a {
